add better slider

--- a/src/components/CategoriesGrid.astro
+++ b/src/components/CategoriesGrid.astro
@@ -1,7 +1,7 @@
 ---
 import CategoryCard from './CategoryCard.astro';
 import { useTranslations } from '../i18n/utils';
-import type { MarttiiniCategoryWithImage } from '../libs/marttiini';
+import type { MarttiiniCategoryWithImage } from '../loaders/marttiini/marttiini';
 
 interface Props {
   categories: MarttiiniCategoryWithImage[];
