--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -1,6 +1,6 @@
 ---
 import MarttiiniPicture from './MarttiiniPicture.astro';
-import type { FullMarttiiniProduct } from '../libs/marttiini';
+import type { FullMarttiiniProduct } from '../loaders/marttiini/marttiini';
 import { getLocalizedUrl } from '../i18n/utils';
 
 interface Props {
