--- a/src/components/ProductsGrid.astro
+++ b/src/components/ProductsGrid.astro
@@ -1,6 +1,6 @@
 ---
 import ProductCard from './ProductCard.astro';
-import type { FullMarttiiniProduct } from '../libs/marttiini';
+import type { FullMarttiiniProduct } from '../loaders/marttiini/marttiini';
 
 interface Props {
   products: FullMarttiiniProduct[];
