--- a/src/components/MarttiiniProductPage.astro
+++ b/src/components/MarttiiniProductPage.astro
@@ -1,6 +1,6 @@
 ---
 import MarttiiniPicture from "./MarttiiniPicture.astro";
-import type { FullMarttiiniProduct } from "../libs/marttiini";
+import type { FullMarttiiniProduct } from "../loaders/marttiini/marttiini";
 import { useTranslations } from "../i18n/utils";
 
 interface Props {
