--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,24 +3,18 @@ import Socials from "./Socials.astro";
 import Logo from "./Logo.astro";
 import LanguageSelector from "./LanguageSelector.astro";
 import HeaderNavigation from "./HeaderNavigation.astro";
+import type { SocialAccount } from "../content/misc.repository";
 
-const socials = [
-  {
-    name: "Facebook",
-    url: "https://www.facebook.com/greyhunter",
-    icon: "bi bi-facebook",
-  },
-  {
-    name: "Instagram",
-    url: "https://www.instagram.com/greyhunter",
-    icon: "bi bi-instagram",
-  },
-];
+export type Props = {
+  socials: SocialAccount[];
+}
+
+const { socials } = Astro.props;
 ---
 
 <header class="container-fluid px-0">
   <div class="socials-container bg-dark">
-    <Socials socials={socials} />
+    <Socials accounts={socials} />
   </div>
   <div class="container d-flex justify-content-between align-items-center">
     <Logo />
