--- a/src/components/HeaderNavigation.astro
+++ b/src/components/HeaderNavigation.astro
@@ -1,14 +1,17 @@
 ---
 import { Navbar } from "astro-bootstrap";
 import type { NavbarItemType } from "astro-bootstrap";
+import { getLangFromUrl, useTranslations } from "../i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 
 const siteTitle = "Astro site"; // pull this in from a config file
 const items: NavbarItemType[] = [
-  // pull this in from a config file
-  { text: "Company", href: "#" },
-  { text: "Business Partners", href: "#" },
-  { text: "Databank", href: "#" },
-  { text: "Contact", href: "#" },
+  { text: t('nav.company'), href: "#" },
+  { text: t('nav.partners'), href: "#" },
+  { text: t('nav.databank'), href: "#" },
+  { text: t('nav.contact'), href: "#" },
 ];
 
 const id = "navbarDemo";
