--- a/src/components/PromotedProductsSlider.astro
+++ b/src/components/PromotedProductsSlider.astro
@@ -1,15 +1,18 @@
 ---
 import { Carousel } from "astro-bootstrap";
-import MarttiiniPicture from "./MarttiiniPicture.astro";
+import PromotedProduct from "./PromotedProduct.astro";
 
-import type { PromotedContentProduct } from "../content/product.repository";
-
-interface Props {
-  promotedProducts: PromotedContentProduct[];
+export type Props = {
+  promotedProducts: {
+    manufacturer: string;
+    name: string;
+    caption?: string;
+    image: string;
+    link: string;
+  }[];
   imagesOrientationMap: Record<string, "landscape" | "portrait">;
-}
+};
 
-const carouselId = "promotedProductsCarousel";
 const { promotedProducts, imagesOrientationMap } = Astro.props;
 
 const slides = promotedProducts.map((p, i) => ({
@@ -17,46 +20,25 @@ const slides = promotedProducts.map((p, i) => ({
   alt: p.name,
   img: p.image,
 }));
+
+const carouselId = "promotedProductsCarousel";
 ---
 
 <section class="promoted-products">
-  <Carousel id={carouselId} class="h-100" dark>
+  <Carousel id={carouselId} class="h-100 bg-light" dark>
     <Carousel.Inner>
-      {
-        promotedProducts.map((product, idx) => {
-          const orientation = imagesOrientationMap[product.manufacturer];
-          const isLandscape = orientation === "landscape";
-          return (
-            <Carousel.Item active={idx === 0}>
-              <div class="row align-items-center" style="min-height: 500px;" >
-                <div class={`${isLandscape ? "col-md-8" : "col-md-6"} d-flex justify-content-center align-items-center`} >
-                  {product.image ? (
-                    <MarttiiniPicture
-                      src={product.image}
-                      alt={product.name}
-                      place="front-slider"
-                      imageOrientation={orientation}
-                    />
-                  ) : (
-                    <div
-                      class="placeholder-image bg-secondary d-flex align-items-center justify-content-center"
-                      style="height: 400px; width: 100%;"
-                    >
-                      <span class="text-white">No Image</span>
-                    </div>
-                  )}
-                </div>
-                <div class={isLandscape ? "col-md-4" : "col-md-6"}>
-                  <div class="p-4">
-                    <h2 class="fw-bold mb-2 display-6">{product.name}</h2>
-                    <p class="text-muted mb-0">
-                      {product.manufacturer}
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </Carousel.Item>
-          );
+      { promotedProducts.map((product, idx) => {
+          const layout = imagesOrientationMap[product.image] || "landscape";
+          return <Carousel.Item active={idx === 0}>
+            <PromotedProduct
+              manufacturer={product.manufacturer}
+              name={product.name}
+              caption={product.caption}
+              image={product.image}
+              link={product.link}
+              layout={'portrait'}
+            />
+          </Carousel.Item>;
         })
       }
     </Carousel.Inner>
