add deploy action

--- a/src/components/FrontPageSection.astro
+++ b/src/components/FrontPageSection.astro
@@ -7,7 +7,7 @@ const { heading } = Astro.props;
 ---
 
 <section class="py-5">
-    <h2 class="fs-1 fw-bold text-center mb-4">{heading}</h2>
+    <h2 class="fs-4 fw-bold mb-4">{heading}</h2>
     <hr class="text-secondary" />
     <slot/>
 </section>
