--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -1,30 +1,24 @@
 ---
-import { languages } from "../i18n/ui";
-import { getLangFromUrl, getLocalizedUrl } from "../i18n/utils";
+import { getRelativeLocaleUrl } from "astro:i18n";
+import { translationRepository } from "../content";
 
-const currentLang = getLangFromUrl(Astro.url);
+const languages = translationRepository.findAvailableLanguages();
+const currentLang = translationRepository.getLanguage(Astro.currentLocale as string);
 const currentPath = Astro.url.pathname.split('/').slice(2).join('/');
 ---
 
 <div class="dropdown d-inline-block ms-3">
-  <button
-    class="btn btn-outline-secondary dropdown-toggle btn-sm"
-    type="button"
-    data-bs-toggle="dropdown"
-    aria-expanded="false"
-  >
-    {currentLang === "pl" ? "🇵🇱" : "🇬🇧"}
+  <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    {currentLang.flag}
   </button>
   <ul class="dropdown-menu">
-    {
-      Object.entries(languages).map(([l, label]) => (
+    { languages.map(({ code, label, flag }) => (
         <li>
-          <a class="dropdown-item" href={getLocalizedUrl(l, currentPath)}>
-            {l === "pl" ? "🇵🇱" : "🇬🇧"}
+          <a class="dropdown-item" href={getRelativeLocaleUrl(code, currentPath)}>
+            {flag}
             {label}
           </a>
         </li>
-      ))
-    }
+      )) }
   </ul>
 </div>
