--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -8,10 +8,10 @@ export type Props = {
 const { accounts } = Astro.props;
 ---
 
-<div class="d-flex gap-4 justify-content-center">
+<div class="d-flex gap-4 justify-content-center p-2">
   {
     accounts.map((social: SocialAccount) => (
-      <a href={social.url} class="fs-5 link-underline link-underline-opacity-0 text-white" target="_blank" rel="noopener noreferrer">
+      <a href={social.url} class="fs-6 link-underline link-underline-opacity-0 text-white" target="_blank" rel="noopener noreferrer">
         <i class={social.icon} />
         {social.name}
       </a>
