--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,9 @@ import "bootstrap-icons/font/bootstrap-icons.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
+import { getCloudinaryUrl } from "../libs/cloudinary";
+const faviconUrl = getCloudinaryUrl("tomjan/grey-hunter-logo-01");
+
 interface Props {
   title: string;
 }
@@ -21,7 +24,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Grey Hunter" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={faviconUrl} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
