--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -4,7 +4,13 @@ import { translationRepository } from "../content";
 
 const languages = translationRepository.findAvailableLanguages();
 const currentLang = translationRepository.getLanguage(Astro.currentLocale as string);
-const currentPath = Astro.url.pathname.split('/').slice(2).join('/');
+
+const pathname = Astro.url.pathname;
+const localePrefix = `/${Astro.currentLocale}/`;
+
+const currentPath = pathname.startsWith(localePrefix) 
+  ? pathname.slice(localePrefix.length)
+  : pathname;
 ---
 
 <div class="dropdown d-inline-block ms-3">
