--- a/src/layouts/ProductPage.astro
+++ b/src/layouts/ProductPage.astro
@@ -12,12 +12,11 @@ export type Props = {
 };
 
 const { manufacturer, product } = Astro.props;
-const specification = product.attribute_groups.find( (g) => g.id === "specification" );
 ---
 
 <div id="productPage" class="mt-4 animate-fade-in">
   <div class="heading d-flex flex-column animate-fade-in-up">
-    <h1 class="fw-bold text-center m-0">{product.name_short}</h1>
+    <h1 class="fw-bold text-center m-0">{product.name}</h1>
     <h2 class="h3 text-secondary text-center m-0">{product.category_name}</h2>
   </div>
 
@@ -25,24 +24,21 @@ const specification = product.attribute_groups.find( (g) => g.id === "specificat
     <div class="col-md-6 d-flex justify-content-center align-items-center animate-fade-in-left">
       <CldImage
         src={product.images[0]}
-        alt={product.name_short}
+        alt={product.name}
         width={600}
       />
     </div>
     <div class="col-md-6 animate-fade-in-right">
       <Section heading="Specification" divider={true}>
-        {specification && <ProductSpecification specification={specification} />}
+        {product.attribute_groups.map((specification) => <ProductSpecification {specification} />)}
       </Section>
+        <Section heading="Description" divider={true} class="mt-5">
+          <div class="bg-white p-2">
+            { product.description.map((paragraph) => ( <p class="text fw-light lh-base">{paragraph}</p> )) }
+          </div>
+        </Section>
     </div>
   </div>
 
-  <Section heading="Description" divider={true} class="mt-5">
-    <div class="bg-white p-2">
-      {
-        product.description.map((paragraph) => (
-          <p class="text fw-light lh-base">{paragraph}</p>
-        ))
-      }
-    </div>
-  </Section>
+
 </div>
