--- a/src/components/ui/Section.astro
+++ b/src/components/ui/Section.astro
@@ -1,14 +1,15 @@
 ---
 export type Props = {
+  id?: string;
   heading?: string;
   divider?: boolean;
   class?: string;
 };
 
-const { heading, divider = false, class: className } = Astro.props;
+const { id, heading, divider = false, class: className } = Astro.props;
 ---
 
-<section class:list={["ui-section", className]}>
+<section {id} class:list={["ui-section", className]}>
     {heading && <h2 class="fs-4 fw-bold mb-0">{heading}</h2>}
     {divider && <hr class="text-secondary" />}
     <slot/>
