--- a/src/pages/[lang]/[manufacturer]/index.astro
+++ b/src/pages/[lang]/[manufacturer]/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
+import ManufacturerPage from "../../../layouts/ManufacturerPage.astro";
 import { categoryRepository, manufacturerRepository } from "../../../content";
 import { getOwnerStory } from "../../../content/site.repository";
-import Section from "../../../components/ui/Section.astro";
-import OfficialDistributor from "../../../components/OfficialDistributor.astro";
-import CategoryCard from "../../../components/product/CategoryCard.astro";
 
 export async function getStaticPaths() {
   return [
@@ -21,14 +19,9 @@ const ownerStory = getOwnerStory(manufacturer, lang);
 ---
 
 <Layout title={manufacturerData.name} lang={lang}>
-  <div class="manufacturer-page animate-fade-in">
-
-    <OfficialDistributor manufacturer={manufacturerData} ownerStory={ownerStory} />
-
-    <Section heading="Kategorie produktów" divider={true}>
-      <div class="row row-cols-1 row-cols-md-3 g-4 animate-stagger">
-        { manufacturerCategories.map((category) => <CategoryCard category={category} /> ) }
-      </div>
-    </Section>
-  </div>
+  <ManufacturerPage 
+    manufacturer={manufacturerData}
+    categories={manufacturerCategories}
+    ownerStory={ownerStory}
+  />
 </Layout>
