--- a/src/layouts/ProductPage.astro
+++ b/src/layouts/ProductPage.astro
@@ -2,6 +2,7 @@
 import { CldImage } from "astro-cloudinary";
 import ProductSpecification from "../components/product/ProductSpecification.astro";
 import Section from "../components/ui/Section.astro";
+import Page from "../components/utils/Page.astro";
 
 import type { Manufacturer } from "../content/manufacturer.repository";
 import type { Product } from "../content/product.repository";
@@ -14,13 +15,13 @@ export type Props = {
 const { manufacturer, product } = Astro.props;
 ---
 
-<div id="productPage" class="mt-4 animate-fade-in">
+<Page id="productPage" gap={5} animation="animate-fade-in">
   <div class="heading d-flex flex-column animate-fade-in-up">
     <h1 class="fw-bold text-center m-0">{product.name}</h1>
     <h2 class="h3 text-secondary text-center m-0">{product.category_name}</h2>
   </div>
 
-  <div class="row mt-5">
+  <div class="row mt-5 gap-4 gap-md-0">
     <div class="col-md-6 d-flex justify-content-center align-items-center animate-fade-in-left">
       <CldImage
         src={product.images[0]}
@@ -28,17 +29,15 @@ const { manufacturer, product } = Astro.props;
         width={600}
       />
     </div>
-    <div class="col-md-6 animate-fade-in-right">
-      <Section heading="Specification" divider={true}>
+    <div class="col-md-6 animate-fade-in-right mt-3 mt-md-0">
+      <Section id="productSpecification" heading="Specification" divider={true}>
         {product.attribute_groups.map((specification) => <ProductSpecification {specification} />)}
       </Section>
-        <Section heading="Description" divider={true} class="mt-5">
+        <Section id="productDescription" heading="Description" divider={true} class="mt-5">
           <div class="bg-white p-2">
             { product.description.map((paragraph) => ( <p class="text fw-light lh-base">{paragraph}</p> )) }
           </div>
         </Section>
     </div>
   </div>
-
-
-</div>
+</Page>
