--- a/src/components/attributes/Attribute.astro
+++ b/src/components/attributes/Attribute.astro
@@ -1,14 +1,15 @@
 ---
 export type Props = {
-  name?: string;
+  name: string;
   value: string;
-  className?: string;
+  class?: string;
+  isLast?: boolean;
 };
 
-const { name, value, className } = Astro.props;
+const { name, value, class: className, isLast } = Astro.props;
 ---
 
-<div class={`row m-0 ${className ?? ""}`}>
-  {name && <div class="col p-1"><strong>{name}</strong></div>}
-  <div class="col p-1">{value}</div>
+<div class={`d-flex flex-column flex-sm-row gap-2 p-2 ${!isLast ? "border-bottom" : ""} ${className ?? ""}`}>
+  <div class="fw-bold flex-shrink-0">{name}</div>
+  <div class="flex-grow-1">{value}</div>
 </div>
